Added files via upload

--- a/resume.html
+++ b/resume.html
@@ -1,49 +1,60 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
 <head>
-<title> Haseeb's homepage</title>
-
-<style>
-body
-{
-background-color:lightblue;
-}
-ul li{
-display:inline;
-margin-left:10px;
-}
-.container {
-background-color:white;
-margin-top:30px;
-margin-bottom:30px;
-margin-left:30px;
-margin-right:30px;
-}
-</style>
+<title> Haseeb's Resume</title>
+<meta charset = "utf-8">
+<link rel = "stylesheet" href = "assignment1.css">
+<div id ="wrapper">
 </head>
 
-
-
 <body>
+<header>
+<h1><img src="weblogo.gif" alt = "My Resume" width = "496" height = "116"></h1>
+</header>
+
+<nav>
+<a href ="index.html">Home</a> &nbsp;&nbsp;&nbsp;
+<a href ="projects.html">Projects</a> &nbsp;&nbsp;&nbsp;
+<a href ="resume.html">Resume</a> &nbsp;&nbsp;&nbsp;
+<a href ="hobbies.html">Miscellaneous</a> &nbsp;&nbsp;&nbsp;
+</nav>
+
+<main>
+
+<hr>
+
+<h2>Objective</h2>
 <ul>
-<li> Projects</li>
-<li> Resume</li>
-<li> About Me</li>
+<p>I plan on working for software development, but right now am really in love with HTML/CSS that I might have to be a web designer.</p>
 </ul>
 
-<div class = "container">
-<h3>Haseeb Saadut</h3>
-</hr>
-<h4><u>Objective</h4></u>To work as a web developer, but if I can't get that job, then software developer is the way to go.
-<h4><u>Education</u></h4>I have 3.5 years of college finished with a GPA of 3.3. Also, I plan to graduate at the end of December of 2016.
-<h4><u>Skills</u></h4>
+<h2>Education</h2>
 <ul>
-    <p>Languages: C++, Java, JavaScript, SQL, Unix, HTML</p>
-    <p>Operating Systems: HTML</p>
-    <p>DataBases: SQL</p>
+<li>Major: ITEC - Software Development</li>
+<li>Have 3.3 GPA</li>
+<li>Currently in Georgia Gwinnett College</li>
+<li>Was on the Dean's list multiple semesters</li>
 </ul>
-<h4><u>Accomplishments</u></h4>
-</div>
 
+<h2>Projects</h2>
+<ul>
+<li><a href = " ">Database Project</li></a>
+<li><a href = " ">Java text based game Project</li></a>
+</ul>
 
+<h2>Technical Skills</h2>
+<ul>
+<li>Languages: C, C++, Java, JavaScript, ruby, bash</li>
+<li>Internet Technology: Java applets, HTML, CSS</li>
+<li>Operating systems: Windows 2000, XP, Vista, 7, 8, 10, MAC, UNIX(Linux, Solaris)</li>
+<li>Databases: SQL; Oracle Products (Oracle RDMBS 11g, Oracle SQLPlus, PL/SQL); MySQL</li>
+<li>Graphic/Simulation: Unity, Autodesk, 3DS Max</li>
+</ul>
+
+</main>
+<footer>
+Copyright &copy; 2016 Haseeb's resume
+<br>
+</footer>
 </body>
 </html>
