--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title> Haseeb's Website</title>
+<title> Haseeb's Website.</title>
 <meta charset = "utf-8">
 <link rel = "stylesheet" href = "assignment1.css">
 <div id ="wrapper">
