--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
 <a href ="projects.html">Projects</a> &nbsp;&nbsp;&nbsp;
 <a href ="resume.html">Resume</a> &nbsp;&nbsp;&nbsp;
 <a href ="hobbies.html">Miscellaneous</a> &nbsp;&nbsp;&nbsp;
+<a href ="blog.rb">Blog site</a>
 </nav>
 
 <main>
