--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 <img src = "http://www.guilinliriver.com/public/richfiles/photos/guilin/silver-cave/silver%20cave%20(15).jpg">
 <br>
 <p style = "text-align:center">Night sky</p>
-<img src = "http://wallpapercave.com/wp/1iAHDsC.jpg">
+<img src = "http://wallpapercave.com/wp/1iAHDsC.jpg" width = "960" height = "540">
 
 </main>
 <footer>
