--- a/resume.html
+++ b/resume.html
@@ -50,6 +50,8 @@
 <li>Operating systems: Windows 2000, XP, Vista, 7, 8, 10, MAC, UNIX(Linux, Solaris)</li>
 <li>Databases: SQL; Oracle Products (Oracle RDMBS 11g, Oracle SQLPlus, PL/SQL); MySQL</li>
 <li>Graphic/Simulation: Unity, Autodesk, 3DS Max</li>
+<li>Audio: Audacity</li>
+<li>Also, know how to operate Microsoft Office software: PowerPoint, Word, Excel, and Database</li>
 </ul>
 
 </main>
